Removed unused Classes an Methods. Removed Functions for DTD and RELAXNG Added filterconfiguration to print modified grammars modified method to filter abstract classes